# AKT_tool

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml
database/: connection.py  crud.py  model.py
docs/: ARCHITECTURE.md  LLM_CONTEXT.md
scraper/: engine.py  service.py  tool.py
tests/: test_database.py  test_tool.py
tests/fixtures/: allkeyshop_elden_ring.html  allkeyshop_god_of_war.html
